--- a/index.html
+++ b/index.html
@@ -4,16 +4,87 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WandelTracker</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+            padding: 20px;
+        }
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            margin: 20px auto;
+        }
+        h1 {
+            color: #007bff;
+        }
+        input, select, button {
+            width: 100%;
+            padding: 10px;
+            margin: 8px 0;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+        button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        .output {
+            margin-top: 10px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welkom bij WandelTracker</h1>
-    <p>Registreer of log in om je gewandelde kilometers bij te houden.</p>
-    
-    <input type="email" id="email" placeholder="E-mail">
-    <input type="password" id="password" placeholder="Wachtwoord">
-    <button id="register-btn">Registreren</button>
-    <button id="login-btn">Inloggen</button>
+
+    <div class="container">
+        <h1>WandelTracker</h1>
+        <p>Registreer of log in om je wandelingen bij te houden.</p>
+
+        <input type="email" id="email" placeholder="E-mail">
+        <input type="password" id="password" placeholder="Wachtwoord">
+        <button id="register-btn">Registreren</button>
+        <button id="login-btn">Inloggen</button>
+    </div>
+
+    <div class="container">
+        <h2>Startlocatie instellen</h2>
+        <input type="text" id="latitude" placeholder="Latitude">
+        <input type="text" id="longitude" placeholder="Longitude">
+        <button id="save-start-btn">Opslaan</button>
+    </div>
+
+    <div class="container">
+        <h2>Wandeling registreren</h2>
+        <input type="date" id="date">
+        <input type="number" id="distance" placeholder="Aantal km">
+        <select id="direction">
+            <option value="noord">Noord</option>
+            <option value="oost">Oost</option>
+            <option value="zuid">Zuid</option>
+            <option value="west">West</option>
+        </select>
+        <button id="save-walk-btn">Opslaan</button>
+    </div>
+
+    <div class="container">
+        <h2>Wandeldata ophalen</h2>
+        <input type="date" id="fetch-date">
+        <button id="fetch-walk-btn">Haal data op</button>
+        <p class="output" id="walk-data-output"></p>
+    </div>
 
     <script type="module" src="firebase.js"></script>
 </body>
 </html>
+
