--- a/index.html
+++ b/index.html
@@ -46,20 +46,19 @@
             background-color: #0056b3;
         }
         #main-content {
-            display: none; /* Verberg dashboard tot gebruiker is ingelogd */
+            display: none;
         }
     </style>
 </head>
 <body>
-
-    <!-- 🔹 Login-container (wordt verborgen na inloggen) -->
+    <!-- 🔹 Login-container -->
     <div class="container" id="login-container">
         <h1>WandelTracker</h1>
         <p>Log in met Google om verder te gaan.</p>
         <button class="google-btn" id="google-login-btn">Inloggen met Google</button>
     </div>
 
-    <!-- 🔹 Dashboard-container (zichtbaar na inloggen) -->
+    <!-- 🔹 Dashboard-container -->
     <div id="main-content">
         <div class="container">
             <h2>Welkom bij WandelTracker</h2>
