--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
                 </div>
             </div>
 
-            <!-- Projects List (wordt later dynamisch gevuld) -->
+            <!-- Projects List -->
             <div id="projects-list" class="projects-container">
                 <!-- Projecten komen hier -->
             </div>
         </div>
+
+        <button id="logout-btn" class="secondary-btn">Uitloggen</button>
     </div>
 
     <!-- New Project Modal -->
