--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WandelTracker</title>
-    
-    <!-- CSS imports -->
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/components.css">
-    <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Header -->
@@ -24,16 +21,10 @@
         <div class="login-box">
             <h2>Welkom bij WandelTracker</h2>
             <p>Houd je wandelingen bij en zie hoever je al gekomen bent!</p>
-<button id="google-login-btn" class="google-btn">
-    <svg viewBox="0 0 48 48" width="24" height="24" style="display: inline-block; margin-right: 8px;">
-        <path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"/>
-        <path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"/>
-        <path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"/>
-        <path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"/>
-        <path fill="none" d="M0 0h48v48H0z"/>
-    </svg>
-    Inloggen met Google
-</button>
+            <button id="google-login-btn" class="google-btn">
+                <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google Logo">
+                Inloggen met Google
+            </button>
         </div>
     </div>
 
@@ -68,7 +59,7 @@
 
             <!-- Projects List -->
             <div id="projects-list" class="projects-container">
-                <!-- Projects will be loaded here dynamically -->
+                <!-- Projecten komen hier -->
             </div>
         </div>
 
@@ -89,31 +80,9 @@
                            placeholder="Bijv. Wandelen 2025">
                 </div>
                 <div class="form-group">
-                    <label for="street">Straat:</label>
-                    <input type="text" id="street" required 
-                           placeholder="Straatnaam">
-                </div>
-                <div class="form-group">
-                    <label for="house-number">Huisnummer:</label>
-                    <input type="text" id="house-number" required 
-                           placeholder="Nummer">
-                </div>
-                <div class="form-group">
-                    <label for="postal-code">Postcode:</label>
-                    <input type="text" id="postal-code" required 
-                           placeholder="0000">
-                </div>
-                <div class="form-group">
-                    <label for="city">Gemeente:</label>
-                    <input type="text" id="city" required 
-                           placeholder="Gemeente">
-                </div>
-                <div class="form-group">
-                    <label for="country">Land:</label>
-                    <select id="country" required>
-                        <option value="BE">België</option>
-                        <option value="NL">Nederland</option>
-                    </select>
+                    <label for="address">Start Locatie:</label>
+                    <input type="text" id="address" required 
+                           placeholder="Voer een adres in (bijv. Stationsstraat 1, Gemeente)">
                 </div>
                 <div class="form-group">
                     <label for="project-description">Beschrijving (optioneel):</label>
@@ -132,20 +101,11 @@
         </div>
     </div>
 
-    <!-- Error/Success Message Container -->
-    <div id="message-container" class="message-container"></div>
-
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 WandelTracker - Volg je wandelavontuur</p>
     </footer>
 
-    <!-- Firebase SDK -->
-    <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
-    <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js"></script>
-    <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
-
-    <!-- Application Scripts -->
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="firebase.js"></script>
 </body>
 </html>
