--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                 </button>
             </div>
             <div id="projects-list">
-                <!-- Hier komen de projecten -->
-                <p class="no-projects-message">Je hebt nog geen projecten. Maak een nieuw project aan om te beginnen!</p>
+                <!-- ProjectList React component wordt hier gemount -->
             </div>
         </div>
     </div>
@@ -94,6 +93,8 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script type="module" src="js/app.js"></script>
 </body>
 </html>
