--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script type="module" src="js/components/ProjectList.js"></script>
-    <script type="module" src="js/app.js"></script>
+    <script src="js/app.js"></script>
 
     <!-- Voeg deze scripts toe voor de closing </body> tag in index.html -->
     <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/core@6.1.10/index.global.min.js'></script>
