--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
                     <input type="text" id="project-city" placeholder="Gemeente" required>
                 </div>
                 <div class="form-group">
+                    <label for="project-destination">Einddoel</label>
+                    <input type="text" id="project-destination" placeholder="Stad of gemeente (bijv: Gent)" required>
+                    <p class="text-sm text-gray-500 mt-1">Let op: het einddoel kan later niet meer worden gewijzigd</p>
+                </div>
+
+                
+                <div class="form-group">
                     <label for="project-description">Beschrijving (optioneel)</label>
                     <textarea id="project-description"></textarea>
                 </div>
