--- a/index.html
+++ b/index.html
@@ -108,6 +108,26 @@
         </div>
     </div>
 
+<!-- Goal Modal -->
+<div id="goal-modal" class="modal hidden">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h3>Voeg een doel toe</h3>
+            <button class="close-modal">&times;</button>
+        </div>
+        <form id="goal-form">
+            <div class="form-group">
+                <label for="goal-city">Gemeente / Stad</label>
+                <input type="text" id="goal-city" required>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="secondary-btn" id="cancel-goal">Annuleren</button>
+                <button type="submit" class="primary-btn">Opslaan</button>
+            </div>
+        </form>
+    </div>
+</div>
+    
     <!-- Footer -->
     <footer>
         <div class="footer-content">
