--- a/index.html
+++ b/index.html
@@ -127,6 +127,42 @@
         </form>
     </div>
 </div>
+
+<!-- Route Modal -->
+<div id="route-modal" class="modal hidden">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h3 id="route-modal-title">Route Toevoegen</h3>
+            <button class="close-modal">&times;</button>
+        </div>
+        <form id="route-form">
+            <input type="hidden" id="route-id">
+            <div class="form-group">
+                <label for="route-name">Naam van de route</label>
+                <input type="text" id="route-name" required>
+            </div>
+            <div class="form-group">
+                <label for="route-destination">Bestemming</label>
+                <div class="flex gap-4">
+                    <div class="w-full">
+                        <input type="text" id="route-city" placeholder="Stad/Gemeente" required>
+                    </div>
+                    <div class="w-full">
+                        <input type="text" id="route-country" placeholder="Land" required>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="route-description">Beschrijving (optioneel)</label>
+                <textarea id="route-description"></textarea>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="secondary-btn" id="cancel-route">Annuleren</button>
+                <button type="submit" class="primary-btn" id="save-route-btn">Route Opslaan</button>
+            </div>
+        </form>
+    </div>
+</div>
     
     <!-- Footer -->
     <footer>
