--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WandelTracker</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- In index.html -->
+<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="css/animations.css">
 </head>
 <body>
     <!-- Loading Indicator -->
